force-app/main/default/objects/Observation__c/Observation__c.object-meta.xml
<CustomObject>
    <description>Observations that are captured by the CSM when observing the CPT.</description>
    <label>Observation</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>