force-app/main/default/objects/Observation__c/fields/Activity_Feature__c.field-meta.xml
<CustomField>
    <fullName>Activity_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activity Feature</description>
    <inlineHelpText>Main feature(s) demonstrated during training.</inlineHelpText>
    <label>Activity Feature</label>
    <type>Checkbox</type>
</CustomField>