force-app/main/default/objects/Observation__c/fields/Adjust_Basal_Bolus__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Basal_Bolus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adjust Basal/Bolus Settings</description>
    <inlineHelpText>Modify basal programs and bolus parameters.</inlineHelpText>
    <label>Adjust Basal/Bolus</label>
    <type>Checkbox</type>
</CustomField>