force-app/main/default/objects/Observation__c/fields/Approval_Request_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Rationale__c</fullName>
    <description>This field act as reason for submit for approval</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Request Rationale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>