force-app/main/default/objects/Observation__c/fields/Areas_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Areas_for_Improvement__c</fullName>
    <description>Captures specific, actionable feedback for performance coaching and development.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Specific coaching points and next steps.</inlineHelpText>
    <label>Areas for Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>