force-app/main/default/objects/Observation__c/fields/Auto_Insertion_and_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Auto_Insertion_and_Confirmation__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering the safe and proper device setup steps.</description>
    <inlineHelpText>Auto insertion steps and confirmation cues.</inlineHelpText>
    <label>Auto‑Insertion &amp; Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>