force-app/main/default/objects/Observation__c/fields/Automated_Delivery_Restriction_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Automated_Delivery_Restriction_Alarm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automated Delivery Restriction Alarm</description>
    <inlineHelpText>Alarm when automated delivery is restricted.</inlineHelpText>
    <label>Automated Delivery Restriction Alarm</label>
    <type>Checkbox</type>
</CustomField>