force-app/main/default/objects/Observation__c/fields/Automatic_Priming_and_Secure_Connection__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Priming_and_Secure_Connection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatic priming/secure communications</description>
    <inlineHelpText>Automated priming and secure pairing workflow.</inlineHelpText>
    <label>Automatic Priming &amp; Secure Connection</label>
    <type>Checkbox</type>
</CustomField>