force-app/main/default/objects/Observation__c/fields/Bolus_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Bolus_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bolus Delivery</description>
    <inlineHelpText>How to initiate and confirm bolus delivery.</inlineHelpText>
    <label>Bolus Delivery</label>
    <type>Checkbox</type>
</CustomField>