force-app/main/default/objects/Observation__c/fields/Bolus_Settings_and_Presets__c.field-meta.xml
<CustomField>
    <fullName>Bolus_Settings_and_Presets__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering advanced insulin delivery configurations.</description>
    <inlineHelpText>Configure presets and extended bolus options.</inlineHelpText>
    <label>Bolus Settings &amp; Presets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>