force-app/main/default/objects/Observation__c/fields/Bolus_Using_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Bolus_Using_Sensor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Sensor to Bolus</description>
    <inlineHelpText>Use sensor data for bolus decisions.</inlineHelpText>
    <label>Bolus Using Sensor</label>
    <type>Checkbox</type>
</CustomField>