force-app/main/default/objects/Observation__c/fields/Carb_Counting_and_Glycemia_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Carb_Counting_and_Glycemia_Mgmt__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering core diabetes management fundamentals.</description>
    <inlineHelpText>Cover carb entries and hypo/hyper responses.</inlineHelpText>
    <label>Carb Counting &amp; Glycemia Mgmt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>