force-app/main/default/objects/Observation__c/fields/Check_Syringe_Min_Max_Lines__c.field-meta.xml
<CustomField>
    <fullName>Check_Syringe_Min_Max_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify MIN/MAX lines on Fill Syringe</description>
    <inlineHelpText>Ensure dose within indicated min/max range.</inlineHelpText>
    <label>Check Syringe Min/Max Lines</label>
    <type>Checkbox</type>
</CustomField>