force-app/main/default/objects/Observation__c/fields/Connect_Sensor__c.field-meta.xml
<CustomField>
    <fullName>Connect_Sensor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Connect to Sensor</description>
    <inlineHelpText>Pair/connect CGM sensor to system/PDM.</inlineHelpText>
    <label>Connect Sensor</label>
    <type>Checkbox</type>
</CustomField>