force-app/main/default/objects/Observation__c/fields/Delegate_Observer__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Observer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Account assigned as the delegated observer for this observation</description>
    <inlineHelpText>Name of any delegate who observed on behalf of the CSM/CPT.</inlineHelpText>
    <label>Delegate Observer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Trainer</value>
        </filterItems>
        <filterItems>
            <field>Account.Contract_Type__c</field>
            <operation>equals</operation>
            <value>Level 3</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Observations (Delegate Observer)</relationshipLabel>
    <relationshipName>Trainer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>