force-app/main/default/objects/Observation__c/fields/Delegate_Observer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Observer_Approval_Status__c</fullName>
    <description>This field is used to track the approval stage.</description>
    <label>Delegate Observer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>