force-app/main/default/objects/Observation__c/fields/Effective_Use_of_Print_Resources__c.field-meta.xml
<CustomField>
    <fullName>Effective_Use_of_Print_Resources__c</fullName>
    <description>Assesses the Trainer&apos;s skill in leveraging hardcopy materials.</description>
    <inlineHelpText>Did Trainer Use Print Resources Effectively?</inlineHelpText>
    <label>Effective Use of Print Resources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>