force-app/main/default/objects/Observation__c/fields/Enter_BG_Manually__c.field-meta.xml
<CustomField>
    <fullName>Enter_BG_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually enter a BG</description>
    <inlineHelpText>Enter BG values when not sourced from sensor.</inlineHelpText>
    <label>Enter BG Manually</label>
    <type>Checkbox</type>
</CustomField>