force-app/main/default/objects/Observation__c/fields/External_Delegate__c.field-meta.xml
<CustomField>
    <fullName>External_Delegate__c</fullName>
    <description>Indicates whether the logged-in user is the external delegate observer for this record.</description>
    <formula>AND(
    NOT(ISBLANK(Delegate_Observer__c)),
    $User.ContactId =  Delegate_Observer__r.PersonContactId
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mark if the delegate observer is external to the org.</inlineHelpText>
    <label>External Delegate?</label>
    <type>Checkbox</type>
</CustomField>