force-app/main/default/objects/Observation__c/fields/Fill_Pod__c.field-meta.xml
<CustomField>
    <fullName>Fill_Pod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill Pod</description>
    <inlineHelpText>Demonstrate the pod filling workflow.</inlineHelpText>
    <label>Fill Pod</label>
    <type>Checkbox</type>
</CustomField>