force-app/main/default/objects/Observation__c/fields/Fill_Pod_with_Insulin__c.field-meta.xml
<CustomField>
    <fullName>Fill_Pod_with_Insulin__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering the critical insulin loading procedure.</description>
    <inlineHelpText>Verify insulin type and volume prior to fill.</inlineHelpText>
    <label>Fill Pod with Insulin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>