force-app/main/default/objects/Observation__c/fields/Find_IOB__c.field-meta.xml
<CustomField>
    <fullName>Find_IOB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Find IOB.</description>
    <inlineHelpText>Locate and interpret ‘Insulin On Board’ values.</inlineHelpText>
    <label>Find IOB</label>
    <type>Checkbox</type>
</CustomField>