force-app/main/default/objects/Observation__c/fields/Get_Pod_Status__c.field-meta.xml
<CustomField>
    <fullName>Get_Pod_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Get Status with Pod.</description>
    <inlineHelpText>Check pod/system status and confirm connectivity.</inlineHelpText>
    <label>Get Pod Status</label>
    <type>Checkbox</type>
</CustomField>