force-app/main/default/objects/Observation__c/fields/Hazard_Alarms__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Alarms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Alarms: Hazard</description>
    <inlineHelpText>Review hazard-level alarms and responses.</inlineHelpText>
    <label>Hazard Alarms</label>
    <type>Checkbox</type>
</CustomField>