force-app/main/default/objects/Observation__c/fields/Identify_Mode__c.field-meta.xml
<CustomField>
    <fullName>Identify_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify Mode</description>
    <inlineHelpText>Recognize current system mode (e.g., Auto/Manual).</inlineHelpText>
    <label>Identify Mode</label>
    <type>Checkbox</type>
</CustomField>