force-app/main/default/objects/Observation__c/fields/Locate_Fill_Port__c.field-meta.xml
<CustomField>
    <fullName>Locate_Fill_Port__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify fill port.</description>
    <inlineHelpText>Identify the correct port used for filling.</inlineHelpText>
    <label>Locate Fill Port</label>
    <type>Checkbox</type>
</CustomField>