force-app/main/default/objects/Observation__c/fields/No_Pod_Communication__c.field-meta.xml
<CustomField>
    <fullName>No_Pod_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Pod Communication</description>
    <inlineHelpText>Diagnose and resolve communication issues.</inlineHelpText>
    <label>No Pod Communication</label>
    <type>Checkbox</type>
</CustomField>