force-app/main/default/objects/Observation__c/fields/Observation_Date__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Marks when the observation was formally conducted.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the trainer was observed.</inlineHelpText>
    <label>Observation Date</label>
    <type>Date</type>
</CustomField>