force-app/main/default/objects/Observation__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Type__c</fullName>
    <description>Categorizes the observation for Trainers.</description>
    <inlineHelpText>Select the observation category (e.g., live, recorded, shadow).</inlineHelpText>
    <label>Observation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>