force-app/main/default/objects/Observation__c/fields/Patient_Bill_of_Rights_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Patient_Bill_of_Rights_Reviewed__c</fullName>
    <description>Confirms compliance on whether the Patient Bill of Rights was discussed.</description>
    <inlineHelpText>Confirm patient rights were reviewed.</inlineHelpText>
    <label>Patient Bill of Rights Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>