force-app/main/default/objects/Observation__c/fields/PDM_Settings_and_Alarms__c.field-meta.xml
<CustomField>
    <fullName>PDM_Settings_and_Alarms__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering device operation and response to alerts.</description>
    <inlineHelpText>Core device settings and alarm behaviors.</inlineHelpText>
    <label>PDM Settings &amp; Alarms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>