force-app/main/default/objects/Observation__c/fields/Physician_Orders_Reviewed_and_Signed__c.field-meta.xml
<CustomField>
    <fullName>Physician_Orders_Reviewed_and_Signed__c</fullName>
    <description>Physician Orders reviewed and signed by MD prior to Omnipod start</description>
    <inlineHelpText>Confirm orders compliance and signatures.</inlineHelpText>
    <label>Physician Orders Reviewed &amp; Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>