force-app/main/default/objects/Observation__c/fields/Placement_Technique__c.field-meta.xml
<CustomField>
    <fullName>Placement_Technique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss technique for placing the Pod.</description>
    <inlineHelpText>Steps and tips for successful placement.</inlineHelpText>
    <label>Placement Technique</label>
    <type>Checkbox</type>
</CustomField>