force-app/main/default/objects/Observation__c/fields/Pod_Alerts_Exp_Low_Advisory__c.field-meta.xml
<CustomField>
    <fullName>Pod_Alerts_Exp_Low_Advisory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Alerts: Pod exp, low pod, advisory</description>
    <inlineHelpText>Non-hazard alerts and recommended actions.</inlineHelpText>
    <label>Pod Alerts (Exp/Low/Advisory)</label>
    <type>Checkbox</type>
</CustomField>