force-app/main/default/objects/Observation__c/fields/Pod_Placement_and_Skin_Prep__c.field-meta.xml
<CustomField>
    <fullName>Pod_Placement_and_Skin_Prep__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering site management and adherence protocols.</description>
    <inlineHelpText>Site prep and placement aligned to best practices.</inlineHelpText>
    <label>Pod Placement &amp; Skin Prep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>