force-app/main/default/objects/Observation__c/fields/Pod_Removal_and_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Pod_Removal_and_Disposal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss Pod removal/disposal</description>
    <inlineHelpText>Proper removal and sharps/disposal guidance.</inlineHelpText>
    <label>Pod Removal &amp; Disposal</label>
    <type>Checkbox</type>
</CustomField>