force-app/main/default/objects/Observation__c/fields/Remove_Needle_Cap__c.field-meta.xml
<CustomField>
    <fullName>Remove_Needle_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify needle cap (remove)</description>
    <inlineHelpText>Safe handling when removing the cap.</inlineHelpText>
    <label>Remove Needle Cap</label>
    <type>Checkbox</type>
</CustomField>