force-app/main/default/objects/Observation__c/fields/Replace_Sensor_Transmitter__c.field-meta.xml
<CustomField>
    <fullName>Replace_Sensor_Transmitter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Change Sensor/Transmitter</description>
    <inlineHelpText>Steps for replacing sensor or transmitter.</inlineHelpText>
    <label>Replace Sensor/Transmitter</label>
    <type>Checkbox</type>
</CustomField>