force-app/main/default/objects/Observation__c/fields/Review_History_and_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Review_History_and_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>History Details and Notifications</description>
    <inlineHelpText>Review past events, deliveries, and alerts.</inlineHelpText>
    <label>Review History &amp; Notifications</label>
    <type>Checkbox</type>
</CustomField>