force-app/main/default/objects/Observation__c/fields/Review_Tabs__c.field-meta.xml
<CustomField>
    <fullName>Review_Tabs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Review Tabs</description>
    <inlineHelpText>Navigate app/PDM tabs and main sections.</inlineHelpText>
    <label>Review Tabs</label>
    <type>Checkbox</type>
</CustomField>