force-app/main/default/objects/Observation__c/fields/Review_Watertight_Rating__c.field-meta.xml
<CustomField>
    <fullName>Review_Watertight_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Review IPX 8 (watertight) rating</description>
    <inlineHelpText>Explain water exposure and safety considerations.</inlineHelpText>
    <label>Review Watertight Rating</label>
    <type>Checkbox</type>
</CustomField>