force-app/main/default/objects/Observation__c/fields/Sensor_Graph_View__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Graph_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sensor Graph View</description>
    <inlineHelpText>Interpret sensor graph trends and insights.</inlineHelpText>
    <label>Sensor Graph View</label>
    <type>Checkbox</type>
</CustomField>