force-app/main/default/objects/Observation__c/fields/Site_Selection__c.field-meta.xml
<CustomField>
    <fullName>Site_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss appropriate site selection.</description>
    <inlineHelpText>Review appropriate body sites and rotation.</inlineHelpText>
    <label>Site Selection</label>
    <type>Checkbox</type>
</CustomField>