force-app/main/default/objects/Observation__c/fields/Suspend_Resume_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Resume_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suspend insulin delivery. Resume.</description>
    <inlineHelpText>When/how to pause and resume insulin delivery.</inlineHelpText>
    <label>Suspend/Resume Delivery</label>
    <type>Checkbox</type>
</CustomField>