force-app/main/default/objects/Observation__c/fields/Switch_Modes__c.field-meta.xml
<CustomField>
    <fullName>Switch_Modes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch Modes</description>
    <inlineHelpText>Change between available modes safely.</inlineHelpText>
    <label>Switch Modes</label>
    <type>Checkbox</type>
</CustomField>