force-app/main/default/objects/Observation__c/fields/System_Limited_State__c.field-meta.xml
<CustomField>
    <fullName>System_Limited_State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System State: Limited</description>
    <inlineHelpText>Understand limitations and required actions.</inlineHelpText>
    <label>System Limited State</label>
    <type>Checkbox</type>
</CustomField>