force-app/main/default/objects/Observation__c/fields/Temp_Basal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Temp_Basal_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting a Temp Basal Rate</description>
    <inlineHelpText>Set and monitor temporary basal changes.</inlineHelpText>
    <label>Temp Basal Rate</label>
    <type>Checkbox</type>
</CustomField>