force-app/main/default/objects/Observation__c/fields/Trainer_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Strengths__c</fullName>
    <description>Captures specific, positive feedback for Trainer.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Key areas where the trainer excelled.</inlineHelpText>
    <label>Trainer Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>