force-app/main/default/objects/Observation__c/fields/Training_Observed__c.field-meta.xml
<CustomField>
    <fullName>Training_Observed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the consumer training which the CPT observed that was delivered by the CSM who is training the CPT.</description>
    <inlineHelpText>Which training was observed</inlineHelpText>
    <label>Training Observed</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Training__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Live_Training</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Observations (Patient Training)</relationshipLabel>
    <relationshipName>Observations3</relationshipName>
    <type>Lookup</type>
</CustomField>