force-app/main/default/objects/Observation__c/fields/Troubleshooting_Sick_Day_Manual_Inject__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Sick_Day_Manual_Inject__c</fullName>
    <description>Rates the trainer&apos;s effectiveness in covering emergency and contingency procedures.</description>
    <inlineHelpText>Protocols for issues, illness, and manual injections.</inlineHelpText>
    <label>Troubleshooting, Sick Day, Manual Inject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very effectively</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very effectively</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>