force-app/main/default/objects/Observation__c/fields/Was_Trainer_Efficient_with_Time__c.field-meta.xml
<CustomField>
    <fullName>Was_Trainer_Efficient_with_Time__c</fullName>
    <description>Assesses the Trainer&apos;s effective use of allotted observation time.</description>
    <inlineHelpText>Did the trainer pace the session effectively?</inlineHelpText>
    <label>Was Trainer Efficient with Time?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - not very efficiently</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - very efficiently</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>