force-app/main/default/objects/Observation__c/listViews/Observations.listView-meta.xml
<ListView>
    <fullName>Observations</fullName>
    <columns>NAME</columns>
    <columns>Trainer_Name__c</columns>
    <columns>CPT_Training__c</columns>
    <filterScope>Everything</filterScope>
    <label>Observations</label>
</ListView>